<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Investment Portfolio Tracker II</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="error">* Username or password do not match</string>
    <string name="success">Successfully saved! :-)</string>
    <string name="error_add_user">Passwords do not match</string>
    <string name="txt_error"></string>
    <string name="add_portfolio">Add Portfolio</string>
    <string name="company_name">Company symbol</string>
    <string name="number_of_shares">Number of Shares</string>
    <string name="add">Add</string>
    <string name="cancel_portfolio">Cancel</string>
    <string name="delete_portfolio">Delete Porfolio</string>
    <string name="save">Save Portfolio</string>
    <string name="save_user">Register</string>
    <string name="item_symbol">TEST</string>
    <string name="item_no_shares">00</string>
    <string name="item_price">00</string>
    <string name="item_total">00</string>
    <string name="total">Total</string>
    <string name="log_out">Log Out</string>
    <string name="refresh">Refresh</string>
    <string name="confirm_password">Confirm password</string>

</resources>
